syntax = "proto3";
option go_package = "github.com/my‑org/my‑app/proto/pb;pb";
package mydata.v1;

message PriceUpdate {
  string pair_address = 1;
  string token0 = 2;
  string token1 = 3;
  double price_usd = 4;
  double volume_usd = 5;
  uint64 block_number = 6;
  uint64 timestamp = 7;
}
